--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="header-top">
                 <div class="brand">
                     <a href="#home" id="profileLogo" class="logo" aria-label="Go to top of page">
-                        <img src="https://uploads.onecompiler.io/43x5j6u93/43x5hb7dc/2X2%20-%201%20-%20Edited.png" alt="Mark Anthony Nene Profile Picture" loading="lazy">
+                        <img src="images/profile.png" alt="Mark Anthony Nene professional headshot" loading="lazy" width="120" height="120">
                     </a>
                     <div>
                         <h1>Mark Anthony Nene</h1>
@@ -277,5 +277,6 @@
         <p>&copy; 2024 Mark Anthony Nene. All Rights Reserved.</p>
     </footer>
 </body>
+
 
 </html>
