--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <link rel="icon" type="image/png" sizes="32x32" href="favicon_io/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon_io/favicon-16x16.png">
     <link rel="manifest" href="favicon_io/site.webmanifest">
-
     <link rel="stylesheet" href="styles.css">
     <title>Mark Anthony Nene — Data Analyst Portfolio</title>
 </head>
@@ -22,7 +21,11 @@
                 <div class="header-top">
                     <div class="brand">
                         <button id="profileLogo" class="logo" type="button" aria-label="Open profile image">
-                            <img src="images/profile.png" alt="Mark Anthony Nene professional headshot" loading="lazy" width="120" height="120">
+                            <img src="images/profile.png"
+                            alt="Mark Anthony Nene Profile Picture"
+                            loading="lazy"
+                            width="120" height="120"
+                            class="profile-img">
                         </button>
                         <div>
                             <h1>Mark Anthony Nene</h1>
@@ -39,7 +42,7 @@
                     </div>
                 </div>
             </header>
-
+        </main>
         <section id="about-me">
             <div class="card-style">
                 <h3 class="no-margin-top">About</h3>
@@ -48,7 +51,7 @@
                 </p>
                 <div class="small">
                     <strong>Selected Achievements:</strong>
-                    <ul class="skills-list" style="list-style-type: disc; margin-left: 1.5em; padding-left: 0;">
+                    <ul class="skills-list skills-list--disc">
                         <li>Built an interactive sales dashboard in Excel, identifying key revenue drivers and proposing discount strategies.</li>
                         <li>Cleaned and structured a Pima Diabetes dataset, improving data integrity for statistical analysis.</li>
                         <li>Audited a ₱2M+ student government budget, ensuring transparency and accountability.</li>
@@ -56,7 +59,7 @@
                 </div>
                 <div>
                     <strong>Skills:</strong>
-                    <ul class="skills-list" style="list-style-type: disc; margin-left: 1.5em; padding-left: 0;">
+                    <ul class="skills-list skills-list--disc">
                         <li><strong>Tools:</strong> Excel, JASP, Praat</li>
                         <li><strong>Techniques:</strong> Data Cleaning, Data Curation, Pivot Tables, Statistical Analysis, Imputation</li>
                         <li><strong>Outputs:</strong> Dashboards, Audit Reports, Statistical Models</li>
@@ -241,32 +244,35 @@
         </section>
 
         <!-- Modals -->
-        <div class="modal-back" aria-hidden="true" role="dialog" aria-labelledby="modalTitle">
-            <div class="modal">
-                <h3 id="modalTitle"></h3>
-                <p class="small" id="modalText"></p>
-                <div class="flex" style="display:flex; justify-content: flex-end; gap:8px;">
-                    <button class="close" id="modalClose" aria-label="Close project details">Close</button>
+            <div class="modal-back" aria-hidden="true" role="dialog" aria-modal="true" aria-labelledby="modalTitle">
+                <div class="modal">
+                    <h3 id="modalTitle"></h3>
+                    <p class="small" id="modalText"></p>
+                    <div class="modal-actions">
+                        <button class="close" id="modalClose" aria-label="Close project details">Close</button>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="profile-modal-back" aria-hidden="true" role="dialog" aria-label="Profile image dialog">
-            <div class="profile-modal-content" tabindex="-1">
-                <button class="profile-modal-close" aria-label="Close profile picture modal">×</button>
-                <img src="images/profile.png" alt="Mark Anthony Nene Profile Picture" loading="lazy">
+            <div class="profile-modal-back" aria-hidden="true" role="dialog" aria-modal="true" aria-label="Profile image dialog">
+                <div class="profile-modal-content" tabindex="-1" role="document">
+                    <button class="profile-modal-close" aria-label="Close profile picture modal">×</button>
+                    <img src="images/profile.png" alt="Mark Anthony Nene Profile Picture" loading="lazy" width="120" height="120" style="max-width:100%; object-fit:contain; border-radius: 8px;">
+                </div>
             </div>
-        </div>
-    </div>
+        </main>  <!-- <-- Closed here properly -->
+    </div> 
 
-    <!-- Floating Navigation Bar -->
+        <!-- Floating Navigation Bar -->
     <div class="floating-nav-wrapper">
         <nav class="floating-nav" aria-label="Main navigation">
             <a href="#home">Home</a>
             <a href="#about-me">About</a>
+            <!-- Replace href="#" with javascript:void(0) or real URLs -->
             <a href="#projects">Projects</a>
             <a href="#contacts">Contacts</a>
         </nav>
     </div>
+
     <button id="scrollTopBtn" aria-label="Scroll to top of page">↑</button>
     <footer>
         <p>&copy; 2024 Mark Anthony Nene. All Rights Reserved.</p>
