--- a/index.html
+++ b/index.html
@@ -211,7 +211,6 @@
             </div>
         </section>
 
-        <!-- New Contacts Section -->
         <section id="contacts">
             <h2>Contact Me</h2>
             <p class="small">Feel free to reach out to me for collaboration, inquiries, or just to say hi!</p>
@@ -243,7 +242,6 @@
             </div>
         </section>
 
-        <!-- Modals -->
             <div class="modal-back" aria-hidden="true" role="dialog" aria-modal="true" aria-labelledby="modalTitle">
                 <div class="modal">
                     <h3 id="modalTitle"></h3>
@@ -259,15 +257,13 @@
                     <img src="images/profile.png" alt="Mark Anthony Nene Profile Picture" loading="lazy" width="120" height="120" style="max-width:100%; object-fit:contain; border-radius: 8px;">
                 </div>
             </div>
-        </main>  <!-- <-- Closed here properly -->
+        </main>
     </div> 
 
-        <!-- Floating Navigation Bar -->
     <div class="floating-nav-wrapper">
         <nav class="floating-nav" aria-label="Main navigation">
             <a href="#home">Home</a>
             <a href="#about-me">About</a>
-            <!-- Replace href="#" with javascript:void(0) or real URLs -->
             <a href="#projects">Projects</a>
             <a href="#contacts">Contacts</a>
         </nav>
@@ -280,3 +276,4 @@
     <script src="scripts.js"></script>
 </body>
 </html>
+
