--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
 <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta 
+    name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=3, user-scalable=yes">
     <meta name="description" content="Portfolio of Mark Anthony Nene, aspiring Data Analyst with experience in Excel dashboards, audits, and dataset preprocessing.">
     <link rel="apple-touch-icon" sizes="180x180" href="favicon_io/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon_io/favicon-32x32.png">
@@ -274,6 +275,7 @@
         <p>&copy; 2024 Mark Anthony Nene. All Rights Reserved.</p>
     </footer>
     <script src="scripts.js"></script>
+
+
 </body>
 </html>
-
