--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mark Anthony Nene - Data Analyst Portfolio</title>
     <meta name="description" content="Portfolio of Mark Anthony Nene, aspiring Data Analyst with experience in Excel dashboards, audits, and dataset preprocessing.">
-    <link rel="apple-touch-icon" sizes="180x180" href="/favicon_io/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon_io/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon_io/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon_io/favicon-16x16.png">
     <link rel="stylesheet" href="styles.css">
-    <link rel="manifest" href="/site.webmanifest">
+    <link rel="manifest" href="site.webmanifest">
 
     <!-- Google Analytics (Replace YOUR_MEASUREMENT_ID with your actual ID) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=YOUR_MEASUREMENT_ID"></script>
@@ -30,7 +30,7 @@
         <div class="hero-content">
             <div class="hero-top">
                 <div class="hero-profile">
-                    <img src="/images/profile.png" alt="Mark Anthony Nene" class="profile-image" id="profileImage" loading="lazy" onerror="this.src='data:image/svg+xml,%3Csvg xmlns=%22http://www.w3.org/2000/svg%22 width=%22120%22 height=%22120%22%3E%3Crect fill=%22%232D6BAF%22 width=%22120%22 height=%22120%22/%3E%3Ctext x=%2250%25%22 y=%2250%25%22 dominant-baseline=%22middle%22 text-anchor=%22middle%22 fill=%22white%22 font-size=%2248%22 font-weight=%22bold%22%3EMN%3C/text%3E%3C/svg%3E'; this.onerror=null;">
+                    <img src="images/profile.png" alt="Mark Anthony Nene" class="profile-image" id="profileImage" loading="lazy" onerror="this.src='data:image/svg+xml,%3Csvg xmlns=%22http://www.w3.org/2000/svg%22 width=%22120%22 height=%22120%22%3E%3Crect fill=%22%232D6BAF%22 width=%22120%22 height=%22120%22/%3E%3Ctext x=%2250%25%22 y=%2250%25%22 dominant-baseline=%22middle%22 text-anchor=%22middle%22 fill=%22white%22 font-size=%2248%22 font-weight=%22bold%22%3EMN%3C/text%3E%3C/svg%3E'; this.onerror=null;">
                     <div class="hero-info">
                         <h1>Mark Anthony Nene</h1>
                         <p class="hero-subtitle-formatted">Aspiring Data Analyst — Bachelor of Science in Applied Mathematics</p>
@@ -212,7 +212,7 @@
     <div class="modal" id="profileModal" role="dialog" aria-modal="true" aria-labelledby="profileModalTitle">
         <div class="modal-content">
             <button class="modal-close" aria-label="Close modal" aria-controls="profileModal"><i data-lucide="x"></i></button>
-            <img src="/images/profile.png" alt="Mark Anthony Nene" class="profile-modal-image" loading="lazy" onerror="this.src='data:image/svg+xml,%3Csvg xmlns=%22http://www.w3.org/2000/svg%22 width=%22600%22 height=%22600%22%3E%3Crect fill=%22%232D6BAF%22 width=%22600%22 height=%22600%22/%3E%3Ctext x=%2250%25%22 y=%2250%25%22 dominant-baseline=%22middle%22 text-anchor=%22middle%22 fill=%22white%22 font-size=%22200%22 font-weight=%22bold%22%3EMN%3C/text%3E%3C/svg%3E'; this.onerror=null;">
+            <img src="images/profile.png" alt="Mark Anthony Nene" class="profile-modal-image" loading="lazy" onerror="this.src='data:image/svg+xml,%3Csvg xmlns=%22http://www.w3.org/2000/svg%22 width=%22600%22 height=%22600%22%3E%3Crect fill=%22%232D6BAF%22 width=%22600%22 height=%22600%22/%3E%3Ctext x=%2250%25%22 y=%2250%25%22 dominant-baseline=%22middle%22 text-anchor=%22middle%22 fill=%22white%22 font-size=%22200%22 font-weight=%22bold%22%3EMN%3C/text%3E%3C/svg%3E'; this.onerror=null;">
             <h2 class="modal-title" id="profileModalTitle">Mark Anthony Nene</h2>
             <p class="modal-description">Aspiring Data Analyst with a passion for transforming complex data into actionable insights and solving real-world problems through statistical analysis and data visualization.</p>
         </div>
@@ -251,3 +251,4 @@
     <script src="scripts.js" defer></script>
 </body>
 </html>
+
