--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="index, follow">
     <title>Mark Anthony Nene - Data Analyst Portfolio</title>
     <meta name="description" content="Portfolio of Mark Anthony Nene, aspiring Data Analyst with experience in Excel dashboards, audits, and dataset preprocessing.">
     <link rel="apple-touch-icon" sizes="180x180" href="favicon_io/apple-touch-icon.png">
@@ -11,13 +12,13 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="manifest" href="site.webmanifest">
 
-    <!-- Google Analytics (Replace YOUR_MEASUREMENT_ID with your actual ID) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=YOUR_MEASUREMENT_ID"></script>
+    <!-- Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-9QHP0D5FLW"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-      gtag('config', 'YOUR_MEASUREMENT_ID');
+      gtag('config', 'G-9QHP0D5FLW');
     </script>
     <script src="https://unpkg.com/lucide@latest"></script>
 </head>
@@ -251,4 +252,3 @@
     <script src="scripts.js" defer></script>
 </body>
 </html>
-
