Modify viewport settings for better responsiveness
Updated viewport meta tag to disable user scaling.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" data-color-scheme="light">
 <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="robots" content="index, follow">
     <title>Mark Anthony Nene - Data Analyst Portfolio</title>
     <meta name="description" content="Portfolio of Mark Anthony Nene, aspiring Data Analyst with experience in Excel dashboards, audits, and dataset preprocessing.">
@@ -130,27 +130,18 @@
             
             <div class="contact-container">
                 <div class="contact-info-grid">
-                    <a href="mailto:markanthony.nene18@gmail.com" class="contact-card">
-                        <div class="contact-icon icon-email"><i data-lucide="mail"></i></div>
-                        <div class="contact-details">
-                            <h3>Email</h3>
-                            <p>markanthony.nene18@gmail.com</p>
-                        </div>
-                    </a>
-                    <a href="https://www.linkedin.com/in/mark-anthony-nene-072964371/" target="_blank" rel="noopener noreferrer" class="contact-card">
-                        <div class="contact-icon icon-linkedin"><i data-lucide="linkedin"></i></div>
-                        <div class="contact-details">
-                            <h3>LinkedIn</h3>
-                            <p>linkedin.com/in/mark-anthony-nene</p>
-                        </div>
-                    </a>
-                    <a href="https://github.com/Rhyxeee" target="_blank" rel="noopener noreferrer" class="contact-card">
-                        <div class="contact-icon icon-github"><i data-lucide="github"></i></div>
-                        <div class="contact-details">
-                            <h3>GitHub</h3>
-                            <p>github.com/Rhyxeee</p>
-                        </div>
-                    </a>
+                  <a href="mailto:markanthony.nene18@gmail.com" class="contact-card">
+                    <div class="contact-icon icon-email"><i data-lucide="mail"></i></div>
+                    <h3>Email</h3>
+                  </a>
+                  <a href="https://www.linkedin.com/in/mark-anthony-nene-072964371/" target="_blank" rel="noopener noreferrer" class="contact-card">
+                    <div class="contact-icon icon-linkedin"><i data-lucide="linkedin"></i></div>
+                    <h3>LinkedIn</h3>
+                  </a>
+                  <a href="https://github.com/Rhyxeee" target="_blank" rel="noopener noreferrer" class="contact-card">
+                    <div class="contact-icon icon-github"><i data-lucide="github"></i></div>
+                    <h3>GitHub</h3>
+                  </a>
                 </div>
                 <!-- Contact Form -->
                 <form id="contact-form" class="contact-form" novalidate>
